# C-CPP-Codes

./: .gitignore  10_math.c  11_circle.c  12_hypotenuse.c  13_if_statement.c  14_switch.c  15_temperature_converter.c  16_calculator.c  17_logical_operator.c  18_OR_operator.c  19_NOT_operator.c  20_function.c  21_parameters.c  22_return.c  23_ternary_operator.c  24_function_prototype.c  25_string.c  26_for_loop.c  27_while_loop.c  28_do_while_loop.c  29_nested_loop.c  2_Scape_Characters.c  30_break_continue.c  31_array.c  32_iterate_array_elements.c  33_2D_array.c  33_string_arrays.c  34_value_swap.c  35_sort_array.c  36_struct.c  37_typedef.c  38_struct_array.c  39_enum.c  3_comments.c  40_pseudo_random_number.c  41_number_guessing_game.c  42_quiz_game.c  43_bitwise_operator.c  44_memory.c  45_pointers.c  (+13 more)
.cache/clangd/index/: 10_math.c.56996175FEDF90E6.idx  11_circle.c.6CAC51489FF8D780.idx  1_HelloWorld.c.EDD4E127B3CB216E.idx  2_Scape_Characters.c.76FED0E967452F5B.idx  3_comments.c.6C4F928EFDEE6556.idx  4_data_types.c.818789160DA2A2BD.idx  4_variables.c.DB53ED099CAF34D5.idx  5_format_specifier.c.C2CCF55B1E1F7C69.idx  6_constant.c.78027D8B7B71D9B8.idx  7_arithmatic_operator.c.1C5092A362298F97.idx  8_augmented_operators.c.8ED996266E6B34F0.idx  9_user_input.c.0AC289D3C72CAB4A.idx
